--- a/content/posts/common/editor/00001.md
+++ b/content/posts/common/editor/00001.md
@@ -5,13 +5,13 @@ showDate: true
 tags: ["Atom"]
 ---
 
-### プログラミング用フォントの導入
+## プログラミング用フォントの導入
 [RectyDiminished](https://github.com/edihbrandon/RictyDiminished/blob/master/RictyDiminished-Regular.ttf)
 
-### Atomインストール
+## Atomインストール
 https://atom.io/  
 
-### Editor設定
+## Editor設定
 Atom -> Preference -> Editor
   - Font Family : Ricty Diminished  
   - Show invisibles : chek on  
@@ -36,6 +36,13 @@ Atomメニュー -> keymap
 - 「key binding resolver」
   入力したショートカットキーがことで使われているかフッターに表示してくれる。
 
-###  dotinstall_pane
+##  dotinstall_pane
 alt + shift + d（ドットインストールタブを表示  
 alt + shift + enter（再生）  
+
+## 数式用
+markdown-preview-plus
+
+## hugo mathjax
+http://easy-copy-mathjax.xxxx7.com/#differentiation
+http://easy-copy-mathjax.xxxx7.com/#number
