--- a/content/posts/common/communication/00002.md
+++ b/content/posts/common/communication/00002.md
@@ -6,10 +6,11 @@ tags: ["speaker"]
 ---
 
 # Speaker
-## CfP (Call for Paper)
+## CfP
+- Call for Proposals
+- Call for Paper
 - 聞きたいのは”ドラマ”であって、”やったこと”ではない
 - 開発している間に、何か壁にぶち当たることがあるはずなんです。それをどうやって乗り越えたのか、次はどうやったらぶち当たらずに済むのか
 
-https://qiita.com/j5ik2o/items/4bacafc04fa11efcea76
-
-- 
+## hoge
+- hoge
