--- a/content/posts/common/communication/00002.md
+++ b/content/posts/common/communication/00002.md
@@ -7,10 +7,12 @@ tags: ["speaker"]
 
 # Speaker
 ## CfP
-- Call for Proposals
-- Call for Paper
+- Call for Proposals / Call for Paper
 - 聞きたいのは”ドラマ”であって、”やったこと”ではない
 - 開発している間に、何か壁にぶち当たることがあるはずなんです。それをどうやって乗り越えたのか、次はどうやったらぶち当たらずに済むのか
+- トピックがなぜ必要なのかを伝えていない
+- hoge
+- hoge
 
 ## hoge
 - hoge
