--- a/content/posts/common/communication/00002.md
+++ b/content/posts/common/communication/00002.md
@@ -14,5 +14,18 @@ tags: ["speaker"]
 - hoge
 - hoge
 
-## hoge
-- hoge
+## Scalaライブラリ選定
+- 非同期処理: akka monix other ...
+- DBアクセス: scalikejdbc ... Slick ...
+- DI airframe
+- JSONライブラリ: argonaut-shapeless、circe、JSON4S、spray-json-shapeless
+
+- アーキテクチャ 選定の話になってしまう？多言語でもそうじゃん
+- 実際の現場で決めて言ったストーリーにドラマがあればいい
+
+## Scala 性能面
+- jvmじゃん？
+
+## Akka Test
+- ActorモデルのUnitTest どこまでやるの？が正確？
+- unit test全般？
