--- a/content/posts/devops/aws/00005.md
+++ b/content/posts/devops/aws/00005.md
@@ -1,9 +1,23 @@
 ---
-title: ECR (Amazon Elastic Container Registry)
+title: ECS
 date: 2018-11-08T14:50:00+09:00
 showDate: true
 tags: ["AWS"]
 ---
 
+## ECR (Amazon Elastic Container Registry)
 - 完全マネージド型の Docker コンテナレジストリ
-- 
+
+## ECS (Amazon Elastic Container Service)
+
+### Service
+- 実態は複数の`docker container`の集合体
+- 以下を管理するもの
+  - どんなコンテナを起動するのか
+  - 何個起動するのか
+  - リクエスト分散するのか
+
+### Task
+- docker container をグループ化するもの
+
+
