--- a/content/posts/devops/aws/00010.md
+++ b/content/posts/devops/aws/00010.md
@@ -8,9 +8,15 @@ tags: ["AWS"]
 # Component
 - VPC内で動作
 
-## Job
+## Jobs
 - AWS Batchに送信する作業単位
+- EC2上で動作するコンテナ化されたアプリケーションとして、AWS Batchによって実行される作業単位
 - Linux exe file, Shell Script, Docker Container Image
 
-## Job Que
-- 
+## Job Queuses
+- submit-job される
+- JobDefinition を元とに、ECSにCompute Environmentを構築する
+
+## JobDefinitions
+
+## Compute Environments
