--- a/content/posts/devops/aws/00010.md
+++ b/content/posts/devops/aws/00010.md
@@ -11,12 +11,43 @@ tags: ["AWS"]
 ## Jobs
 - AWS Batchに送信する作業単位
 - EC2上で動作するコンテナ化されたアプリケーションとして、AWS Batchによって実行される作業単位
+- 必ず`Job Definitions`を参照する
+- コンテナイメージ、コマンド、パラメータを参照する
+- `Job Definitions`のパラメータはオーバーライドが可能
 - Linux exe file, Shell Script, Docker Container Image
+### 属性
+- 雛形の`Job Definitions`
+- 実行先が示された`Job Queues`
+- 実行コマンド
+- vCPUとメモリ要件
 
 ## Job Queuses
-- submit-job される
-- JobDefinition を元とに、ECSにCompute Environmentを構築する
+- JobのQueuesの待ち行列
+### 属性
+- Jobのブライオリティ(整数の値が小さい方が優先)
+- 実行先のCompute Envrionment
 
 ## JobDefinitions
+- jobのテンプレート
+### 属性
+- IAMロール
+- コンテナイメージ
+- 実行するコマンド
+- vCPUとメモリ要件
+- ボリュームとマウントポイント
+- 環境変数
 
 ## Compute Environments
+- jobの実行環境
+### 属性
+- IAM Role
+- EC2 Key pair
+- Provisioning Model
+- Instance type
+- vCPU数(最小、最大、希望の数)
+- Networking(VPC、subnet、security、group)
+- 実行先のコンピューと環境
+- EC2タグ
+
+
+
