--- a/content/posts/backend/php/00002.md
+++ b/content/posts/backend/php/00002.md
@@ -1,10 +1,14 @@
 ---
-title: PHP 書き方
+title: Laradock
 date: 2018-10-31T13:40:00+09:00
 showDate: true
-tags: ["php"]
+tags: ["php", "laravel"]
 ---
 
-# スコープ定義変数 (::)
+# Laradock
 
-# 
+```
+$ mkdir laradock-project
+$ cd laradock-project
+$ git clone https://github.com/laradock/laradock.git
+```
