--- a/content/posts/common/design/00002.md
+++ b/content/posts/common/design/00002.md
@@ -7,3 +7,18 @@ tags: ["DDD"]
 
 ## ドメイン駆動設計(DDD)
 - モデルを中心とした設計・開発手法
+- ドメインエキスパートと共同でドメイン知識を抽象化したドメインモデルを作成する
+- ドメインモデルをユビキタス言語として共有化
+- ユビキタス言語化されたドメインモデルをそのまま実装に落とし込む
+
+## モデルの構成要素
+### モデルの表現
+- Entities
+- Value Object
+- Service
+
+### モデルのライフサイクル
+- Aggregates
+- Factories
+- Repositories
+
