--- a/content/posts/common/design/00002.md
+++ b/content/posts/common/design/00002.md
@@ -22,3 +22,17 @@ tags: ["DDD"]
 - Factories
 - Repositories
 
+## Entities
+### 抽象的な連続性と同一性
+- 固有のIDを持つ
+- 分散環境、永続化前後でも追跡可能
+
+### 属性(状態)に左右されない同一性
+- 連続性を保証するIDは、オブジェクトの属性値に左右されない
+- 属性値が全て同じでもIDが異なれば別のもの
+- 属性値が異なっていてもIDが同じであれば同じもの
+- 同一性の判断とライフサイクルは、モデル毎に個別の設計にする
+
+### 具体例
+- 顧客、口座、注文、在庫...etc
+
