--- a/content/posts/common/design/00002.md
+++ b/content/posts/common/design/00002.md
@@ -36,3 +36,18 @@ tags: ["DDD"]
 ### 具体例
 - 顧客、口座、注文、在庫...etc
 
+## Value Objects
+### 連続性と同一性が不要なオブジェクト
+- 属性がどんな値であるかに焦点を置かれるもの
+- 一過性のことも多く、操作のために生成されては破棄される
+- 状態を変更できないもの(immutable)
+
+### 他の何らかの状態を記述する属性となる
+- 何であるかだけが問題となり、誰であるか、あるいはどれであるかは問われないような設計の要素
+- エンティティの属性として使用される
+
+### 具体例
+- 色、量、地域、経路...etc
+
+
+- 
