--- a/content/posts/common/design/00002.md
+++ b/content/posts/common/design/00002.md
@@ -50,4 +50,11 @@ tags: ["DDD"]
 - 色、量、地域、経路...etc
 
 
-- 
+## Service TODO
+### Entity や Value　Object には不自然な操作
+- 操作であり状態を持たない
+
+### EntityとValueObjectのコントローラー
+
+### サービスはドメイン層のものだけではない
+
