--- a/content/posts/common/design/00003.md
+++ b/content/posts/common/design/00003.md
@@ -6,9 +6,12 @@ tags: ["Design Pattern"]
 ---
 
 # 分類
-オブジェクトの  
-- 生成
-- 振る舞い
-- 構造
+| CLASSIFICATION | PATTERN |
+| --- | --- |
+| 構造 | [Flyweight](#Flyweight) |
 
-# 
+# Flyweight
+## about
+- 省メモリのためのパターン
+- 軽量化されるべきインスタンスの生成や管理を行う Factory クラスを作成
+- 軽量化されるべきインスタンスは、この Factory クラスを介して取得する
