--- a/content/posts/common/design/00002.md
+++ b/content/posts/common/design/00002.md
@@ -5,7 +5,9 @@ showDate: true
 tags: ["DDD"]
 ---
 
-## ドメイン駆動設計(DDD)
+# ドメイン駆動設計(DDD)
+https://www.slideshare.net/TakuyaKitamura1/ddd-29003356
+e
 - モデルを中心とした設計・開発手法
 - ドメインエキスパートと共同でドメイン知識を抽象化したドメインモデルを作成する
 - ドメインモデルをユビキタス言語として共有化
@@ -58,3 +60,6 @@ tags: ["DDD"]
 
 ### サービスはドメイン層のものだけではない
 
+
+## todo
+https://little-hands.hatenablog.com/entry/2018/12/09/entity-value-object
