--- a/content/posts/backend/scala/99999.md
+++ b/content/posts/backend/scala/99999.md
@@ -49,10 +49,25 @@ val glassDrink: Glass[Drink] = new Glass[Water](new Water)
 
 これを非変といい、Scalaではデフォルト
 
+## 共変
+- 型パラメータで定義したクラスにもサブタイプの関係を利用したい場合もある
+- その場合共変[+T]することで、サブタイプの関係を型パラメータで定義したクラスに使うことができる
 
-## Hoge
-- 型パラメータで定義したクラスにも
+```
+class Glass[+T](var content: T) {
+  def put(t: T): Unit = { content = t }
+  def get: T = content
+}
+```
 
+```
+val glassDrink: Glass[Drink] = new Glass[Water](new Water)
+```
 
+## 反変
+- 共変の逆
 
-TODO
+```
+val glassDrink: Glass[Water] = new Glass[Drink](new Drink)
+```
+
