--- a/content/posts/backend/scala/99999.md
+++ b/content/posts/backend/scala/99999.md
@@ -71,3 +71,12 @@ val glassDrink: Glass[Drink] = new Glass[Water](new Water)
 val glassDrink: Glass[Water] = new Glass[Drink](new Drink)
 ```
 
+## 変異指定
+- サブタイプの関係を、型パラメータのクラスで指定する制約のこと
+
+例）Listは共変
+```
+val list: List[Any] = List[Int](1,2,3)
+```
+
+
