--- a/content/posts/backend/scala/99999.md
+++ b/content/posts/backend/scala/99999.md
@@ -74,9 +74,52 @@ val glassDrink: Glass[Water] = new Glass[Drink](new Drink)
 ## 変異指定
 - サブタイプの関係を、型パラメータのクラスで指定する制約のこと
 
-例）Listは共変
+```
+Any
+ └─AnyVal    | AnyRef
+    └─Unit   |  └─String
+    └─Int    |  └─class
+    └─Long   |  └─Null
+    └─Double |
+    └─Byte   |
+    └─etc... |
+        └─      └─ Nothing
+```
+
+### 例）Listは共変
 ```
 val list: List[Any] = List[Int](1,2,3)
 ```
+- `List[Int]`を`List[Any]`にバインドできる
 
+## 下限境界
+- BはAのスーパー型
+- 結果型`List[B]`は、Listがインスタンス化した要素を返すか、汎化した要素のListを返すことを表している
+
+```
+sealed abstract class List[+A] extends AbstractSeq[A]
+// 省略
+  def ::[B >: A](x: B): List[B] = new scala.collection.immutable.::(x, this)
+```
+
+### 例）同じ要素（`Int`）の場合には、同じ要素（`Int`）の`List`型が作成される
+```
+scala> val list = List(2,3,4)
+list: List[Int] = List(2,3,4)
+
+scala> val listInt = 1 :: list
+listInt: List[Int] = List(1,2,3,4)
+```
+
+### 例）`Double`型を要素に追加する場合は、`Int、Double`のスーパータイプである`AnyVal`型の`List`が作られる
+```
+scala> val listAnyVal = 0.5 :: listInt
+listAnyVal: List[AnyVal] = List(0.5,1,2,3,4)
+```
+
+### 例）`String`型を要素に追加する場合は、`Int、Double`のスーパータイプである`AnyVal`型の`List`が作られる
+```
+scala> val listAny = "Hello" :: listInt
+listAny: List[Any] = List(Hello,1,2,3,4)
+```
 
