--- a/content/posts/backend/scala/99999.md
+++ b/content/posts/backend/scala/99999.md
@@ -5,6 +5,8 @@ showDate: true
 tags: ["Scala"]
 ---
 
+https://speakerdeck.com/taketora/bian-wei-zhi-ding-nituitewakariyasukujie-shuo-sasetekudasai-a9b35ffb-c910-493e-a9f0-de09f6487918?slide=32
+
 # Scala型パラメータ
 ## はじめに
 - クラス、インタフェース定義時に何の型が入るか決まっていないがインスタンス化する際に型を決定すること
@@ -73,7 +75,7 @@ val glassDrink: Glass[Water] = new Glass[Drink](new Drink)
 
 ## 変異指定
 - サブタイプの関係を、型パラメータのクラスで指定する制約のこと
-
+- ボトムタイプの`Nothing`型を全ての型にバインドできる
 ```
 Any
  └─AnyVal    | AnyRef
@@ -117,9 +119,12 @@ scala> val listAnyVal = 0.5 :: listInt
 listAnyVal: List[AnyVal] = List(0.5,1,2,3,4)
 ```
 
-### 例）`String`型を要素に追加する場合は、`Int、Double`のスーパータイプである`AnyVal`型の`List`が作られる
+### 例）`String`型を要素に追加する場合は、`Int、String`のスーパータイプである`Any`型の`List`が作られる
 ```
 scala> val listAny = "Hello" :: listInt
 listAny: List[Any] = List(Hello,1,2,3,4)
 ```
+
+- 通常引数の位置に共変型パラメータが入ると型安全が壊れる可能性があり、このまま型パラメータAを引数に持っていくとコンパイラに怒られる
+- しかし、immutableなクラスであれば型は壊れるない
 
