--- a/content/posts/backend/scala/99999.md
+++ b/content/posts/backend/scala/99999.md
@@ -126,5 +126,5 @@ listAny: List[Any] = List(Hello,1,2,3,4)
 ```
 
 - 通常引数の位置に共変型パラメータが入ると型安全が壊れる可能性があり、このまま型パラメータAを引数に持っていくとコンパイラに怒られる
-- しかし、immutableなクラスであれば型は壊れるない
+- しかし、immutableなクラスであれば型は壊れない
 
