--- a/content/posts/backend/scala/99999.md
+++ b/content/posts/backend/scala/99999.md
@@ -128,3 +128,18 @@ listAny: List[Any] = List(Hello,1,2,3,4)
 - 通常引数の位置に共変型パラメータが入ると型安全が壊れる可能性があり、このまま型パラメータAを引数に持っていくとコンパイラに怒られる
 - しかし、immutableなクラスであれば型は壊れない
 
+### 通常引数に共変型パラメータが入ると型安全が壊れる理由
+- 非変で定義された`Arrya[T]`は、mutableなコレクション（配列）
+
+例）仮に共変がOKだった場合に、`Water`型が`Juice`型に変わってしまう例
+```
+val arrayWater: Array[Water] = Array(Water,Water)
+
+val arrayDrink: Array[Drink] = arrayWater
+
+arrayDrink(0) = Juice
+```
+
+## 反変のメリット
+- FunctionN（関数を定義するtraitで、通常はシンタックスシュガーを使う）
+- 
