--- a/content/posts/backend/scala/00011.md
+++ b/content/posts/backend/scala/00011.md
@@ -1,5 +1,5 @@
 ---
-title: Scala Matsuri
+title: Scala Tips
 date: 2019-01-17T22:30:00+09:00
 showDate: true
 tags: ["Scala"]
@@ -35,9 +35,24 @@ tags: ["Scala"]
 - 遅延評価
 - 速い
 
+## implicit Class
+- トップレベルに定義できない
+
 ## value-Class
 - AnyValを継承
-- val フィールドを一つだけもつクラス
+- public val フィールドを一つだけコンストラクタとするクラス
+- フィールドには、val、var、trait、class、objectは、定義できない
 - def はいくつもOK
 - コンパイル時には存在するが、ランタイム時には型が消える
-- val フィールドの型になる
+  - val フィールドの型になる
+- 汎用トレイト（universal trait）のみ拡張することができる
+
+## 汎用トレイト（universal trait）
+- Anyを継承する
+- メンバとしてdefをもつ
+- 初期化を行わない
+
+https://docs.scala-lang.org/ja/overviews/core/value-classes.html
+
+## 不変コレクション
+- コレクション要素の追加、削除、更新を模範した演算は提供されるが、全ての場合に置いて演算は新しいコレクションを返し、古いコレクションはイミュータブルである。
