--- a/content/posts/common/network/00002.md
+++ b/content/posts/common/network/00002.md
@@ -94,3 +94,34 @@ tags: ["network"]
 ## FQDN(Fully Qualified Domain Name)=完全修飾ドメイン名
 - ドメイン名とホスト名を繋げた文字列のこと
 - http:// **www.hoge.co.jp** // 太字部分が該当
+
+# DNS
+- Domain Name System
+- ドメイン名をIPアドレスに変換するシステム
+## Aレコード
+- Adress Record
+- ドメインをIPアドレスに置き換えるレコード
+- 例）`hoge.com. IN A 192.168.0.1`
+
+## MXレコード
+- Mail Exchange
+- メールサーバのホスト名を記載するレコード
+- ドメインに紐づいたメールを使用する場合には不可欠
+- 例）`hoge.com. IN MX 10 mail.hoge.com`
+  - 数字の10は優先度を意味している
+  - 1つ目は10、2つ目は20、３つ目は....
+  - 10ずつ増やしているのは、間に余裕を持たせているため!?
+  - `XX@hoge.com`というメールアドレスは、`mail.hoge.com`が処理(配送)する
+
+## CNAMEレコード
+- Canonical NAME
+- ドメインを別のドメインに置き換えるレコード
+- 特定のドメインを別のドメインに転送する場合に使用する
+- 例）`www`有り無しの場合で同じIPアドレスにアクセスする場合
+```
+hoge.com. IN A 192.168.0.1
+www.hoge.com. IN CNAME hoge.com.
+```
+
+## TXTレコード
+- TEXT
