--- a/content/posts/devops/aws/00004.md
+++ b/content/posts/devops/aws/00004.md
@@ -32,3 +32,30 @@ https://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-templat
 
 # Create Stack
 - テンプレートとスタックは、オブジェクト指向でいうところの、クラスとインスタンスに近いイメージ
+
+# Template
+- AWSリソース構成を YAML or JSON で記載したドキュメント
+
+## Section
+- Paramters
+  - 実行時に埋め込む変数値
+- Mappings
+  - 実行環境によって変わる値をMap形式で定義
+- Resource
+  - AWSリソース群を定義する
+
+- 組み込み関数
+  - Ref 他の要素の参照
+  - FindInMap
+
+- 擬似パラメータ
+  - AWS::Region 汎用性
+
+# Stack
+- テンプレートから自動構築されたAWSリソースの集合
+
+- 組み込み関数を使って環境に依存しないテンプレートを目指す
+- リソース追加・変更は必ず CloudFormation で行う
+- テンプレートをバージョン管理する
+- システムの規模やライフサイクルによってテンプレートを分割する
+- JSON or YAML
