--- a/content/posts/common/design/00004.md
+++ b/content/posts/common/design/00004.md
@@ -5,13 +5,22 @@ showDate: true
 tags: ["Concurrent and Parallel Programming"]
 ---
 
+https://blog.takanabe.tokyo/2015/03/26/240/
+
 # 定義
-## ブロッキング処理  
+## ブロッキングI/O
 - ネットワークとして通信先の準備をする
 - **IOが開始できるまで待機する**
 - コネクションを開くまでの待機?
+- ブロッキングは、全ての処理は停止する
 
-## 同期処理  
+## 同期I/O
 - 実際にデータのI/Oを行う
 - **IOが終わるまで待機する**
 - コネクションを使って処理するまで待機?
+
+## ノンブロッキングI/O
+- 
+
+## 非同期I/O
+- 
