--- a/content/posts/backend/spark/00001.md
+++ b/content/posts/backend/spark/00001.md
@@ -161,3 +161,44 @@ $ sbt assembly
 - Sparkのクラスタ環境へのデプロイ(spark-submit)用のjarファイルが作られる
 
 - output以下にpart-00000x（ｘは数字）のファイルが作られている
+
+## Spark 基礎
+- Spark2.0以降のRDD(Resilient Distributed Dataset)は、データセットに置き換えられた
+  - [データセットガイド](http://mogile.web.fc2.com/spark/sql-programming-guide.html)
+
+## データセットの基礎
+```
+./bin/spark-shell
+```
+
+データセットの作成
+```
+scala> val textFile = spark.read.textFile("README.md")
+textFile: org.apache.spark.sql.Dataset[String] = [value: string]
+```
+
+データセットから直接値を取得
+```
+scala> textFile.count()
+res0: Long = 105
+
+scala> textFile.first()
+res1: String = # Apache Spark
+```
+
+新たなデータセットに変換
+```
+scala> val linesWithSpark = textFile.filter(line => line.contains("Spark"))
+linesWithSpark: org.apache.spark.sql.Dataset[String] = [value: string]
+
+scala> linesWithSpark.count()
+res2: Long = 20
+
+# 元のデータセットはそのままだった
+scala> textFile.count()
+res3: Long = 105
+
+# 変換とアクションを繋げることも可能
+scala> textFile.filter(line => line.contains("Spark")).count()
+res4: Long = 20
+```
