--- a/content/posts/backend/scala/00009.md
+++ b/content/posts/backend/scala/00009.md
@@ -105,6 +105,7 @@ http://www.ne.jp/asahi/hishidama/home/tech/scala/annotation/tailrec.html
 
 # 第3章 関数型プログラミングのデータ構造
 
+### 3-3
 ```Scala
 def foldRight[A, B](as: List[A], z: B)(f: (A, B) => B): B = as match {
   case Nil => z
@@ -145,6 +146,7 @@ f(1, Cons(2, Cons(3, Cons(4, Cons(5, Nil: List[Int])))))(Cons(_,_))
 Cons(1, Cons(2, Cons3, Cons(4, Cons(5, Nil: List[Int]))))
 ```
 
+### Exercise 10
 ```Scala
 def foldLeft[A, B](as: List[A], b: B)(f: (B, A) => B): B = as match {
   case Nil => b
@@ -163,6 +165,7 @@ foldLeft(Cons(5, Nil), 6+4)(_+_)
 10+5
 ```
 
+### Exercise 12
 ```Scala
 def reverse[A](l: List[A]): List[A] =
   foldLeft(l, List[A]())((b, a) => Cons(a, b))
@@ -180,6 +183,7 @@ foldLeft(Cons(5, Nil), Cons(4, Cons(3, Cons(2, Cons(1, Nil)))))((b, a) => Cons(a
 Cons(5, Cons(4, Cons(3, Cons(2, Cons(1, Nil)))))
 ```
 
+### Exercise 13
 ```Scala
 def foldRightViaFoldLeft2[A, B](l: List[A], z: B)(f: (A, B) => B): B =
   foldLeft(l, (b: B) => b)((g, a) => b => g(f(a, b)))(z)
@@ -195,6 +199,7 @@ foldLeft(Cons(2, Cons(3, Cons(4, Cons(5, Nil)))), id)((id, 1) => b => id(1 + b))
 foldLeft(Cons(3, Cons(4, Cons(5, Nil))), id)((id, 1) => b => id(f(b + 1)))(0)
 ```
 
+### Exercise 14
 ```Scala
 def append2[A](al: List[A], bl: List[A]): List[A] =
   foldRight(al, bl)(Cons(_,_))
@@ -215,4 +220,57 @@ f(1, f(2, f(3, Cons(4, Cons(5, Cons(6, Cons(7, Cons(8, Cons(9, Cons(10, Nil)))))
 f(1, f(2, Cons(3, Cons(4, Cons(5, Cons(6, Cons(7, Cons(8, Cons(9, Cons(10, Nil)))))))))(Cons(_,_))
 f(1, Cons(2, Cons(3, Cons(4, Cons(5, Cons(6, Cons(7, Cons(8, Cons(9, Cons(10, Nil)))))))))(Cons(_,_))
 Cons(1, Cons(2, Cons(3, Cons(4, Cons(5, Cons(6, Cons(7, Cons(8, Cons(9, Cons(10, Nil)))))))))(Cons(_,_))
+```
+
+### Exercise 15
+```Scala
+def concat[A](l: List[List[A]]): List[A] =
+  foldRight(l, List[A]())(append)
+```
+
+```
+// Program Trace
+concat(List(List(1,2,3), List(4,5,6), List(7,8,9,10)))
+foldRight(List(List(1,2,3), List(4,5,6), List(7,8,9,10)), List[A]())(append)
+f(Cons(1, Cons(2, Cons(3, Nil))), foldRight(List(List(4,5,6), List(7,8,9,10)), List[A]())(append)
+f(Cons(1, Cons(2, Cons(3, Nil))), f(Cons(4, Cons(5, Cons(6, Nil)))), foldRight(List(List(7,8,9,10))),List[A]())(append)
+f(Cons(1, Cons(2, Cons(3, Nil))), f(Cons(4, Cons(5, Cons(6, Nil)))), f(Cons(7, Cons(8, Cons(9, Cons(10, Nil))))), List[A]())(append)
+f(Cons(1, Cons(2, Cons(3, Nil))), f(Cons(4, Cons(5, Cons(6, Nil)))), append(Cons(7, Cons(8, Cons(9, Cons(10, Nil))))))(append)
+f(Cons(1, Cons(2, Cons(3, Nil))), append(Cons(4, Cons(5, Cons(6, (Cons(7, Cons(8, Cons(9, Cons(10, Nil)))))))))(append)
+append(Cons(1, Cons(2, Cons(3, (Cons(4, Cons(5, Cons(6, (Cons(7, Cons(8, Cons(9, Cons(10, Nil)))))))))))))(append)
+Cons(1, Cons(2, Cons(3, (Cons(4, Cons(5, Cons(6, (Cons(7, Cons(8, Cons(9, Cons(10, Nil))))))))))))
+```
+
+### Exercise 15
+```Scala
+def filter[A](as: List[A])(f: A => Boolean): List[A] =
+  foldRight(as, Nil: List[A])((a, b) => if(f(a)) Cons(a, b) else b)
+```
+
+```
+// Program Trace
+filter(List(1,2,3,4,5,6,7,8,9,10))((x: Int) => x % 2 != 0)
+foldRight(as, Nil: List[A])((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, f(3, f(4, f(5, f(6, f(7, f(8, f(9, f(10, Nil: List[A]))))))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, f(3, f(4, f(5, f(6, f(7, f(8, f(9, Nil: List[A])))))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, f(3, f(4, f(5, f(6, f(7, f(8, Cons(9, Nil: List[A])))))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, f(3, f(4, f(5, f(6, f(7, Cons(9, Nil: List[A]))))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, f(3, f(4, f(5, f(6, Cons(7, Cons(9, Nil: List[A]))))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, f(3, f(4, f(5, Cons(7, Cons(9, Nil: List[A])))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, f(3, f(4, Cons(5, Cons(7, Cons(9, Nil: List[A])))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, f(3, Cons(5, Cons(7, Cons(9, Nil: List[A]))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, f(2, Cons(3, Cons(5, Cons(7, Cons(9, Nil: List[A]))))))((a, b) => if(f(a)) Cons(a, b) else b)
+f(1, Cons(3, Cons(5, Cons(7, Cons(9, Nil: List[A])))))((a, b) => if(f(a)) Cons(a, b) else b)
+Cons(1, Cons(3, Cons(5, Cons(7, Cons(9, Nil: List[A])))))((a, b) => if(f(a)) Cons(a, b) else b)
+```
+
+### Exercise 20
+
+```Scala
+def flatMap[A,B](as: List[A])(f: A => List[B]): List[B] =
+  concat(map(as)(f))
+```
+
+```
+flatMap(List(1,2,3,4,5)((x: Int) => Cons(x, Nil)))
 ```
