--- a/content/posts/backend/scala/00009.md
+++ b/content/posts/backend/scala/00009.md
@@ -264,13 +264,34 @@ f(1, Cons(3, Cons(5, Cons(7, Cons(9, Nil: List[A])))))((a, b) => if(f(a)) Cons(a
 Cons(1, Cons(3, Cons(5, Cons(7, Cons(9, Nil: List[A])))))((a, b) => if(f(a)) Cons(a, b) else b)
 ```
 
-### Exercise 20
+## flatMap
+- ネストした`List`の各要素に、`map`を適用して、`flatten`している
 
+## GenTraversableOnce
+- TODO
+
+### Exercise 20
 ```Scala
 def flatMap[A,B](as: List[A])(f: A => List[B]): List[B] =
   concat(map(as)(f))
 ```
 
 ```
+// Program Trace
 flatMap(List(1,2,3,4,5)((x: Int) => Cons(x, Nil)))
+map(Cons(1, Cons(2, Cons(3, Cons(4, Cons(5, Nil))))))(i => List(i, i))
+
+```
+
+### Exercise 21
+```Scala
+def filterViaFlatMap[A](l: List[A])(f: A => Boolean): List[A] =
+  flatMap(l)(a => if (f(a)) List(a) else Nil)
+```
+
+```
+// Program Trace
+List.filterViaFlatMap(List(1,2,3,4,5))((x: Int) => x % 2 != 0)
+flatMap(Cons(1, Cons(2, Cons(3, Cons(4, Cons(5, Nil))))))(a => if (f(a)) List(a) else Nil)
+concat()
 ```
