Update directory structure

--- a/content/posts/design/00001.md
+++ b/content/posts/design/00001.md
@@ -137,10 +137,10 @@ class EmployeeData {}
 - コンポーネントの関係を単方向にする
 
 ## LSP (Liskov Substitution Principle) リスコフの置換原則
--
-
+- TODO
 
 ## ISP (Interface Segregation Principle) インタフェース分離の原則
+- TODO
 
 ## DIP (Dependency Inversion Principle) 依存関係逆転の原則
 - 下位レベルのモジュールは、上位レベルのモジュールに依存するべき
