--- a/content/posts/devops/ansible2/00001.md
+++ b/content/posts/devops/ansible2/00001.md
@@ -5,8 +5,9 @@ showDate: true
 tags: ["Ansible"]
 ---
 
-サンプルソースコード
-https://gitlab.com/shkitayama/ansible_practical_guide/tree/master
+# 前提
+- サンプルソースコード
+  https://gitlab.com/shkitayama/ansible_practical_guide/tree/master
 
 # Ansible Archetecture
 ## 基本動作の概要
@@ -67,12 +68,9 @@ https://gitlab.com/shkitayama/ansible_practical_guide/tree/master
 
 # Install
 ```
-```
-
-```
 $ sudo pip3 install ansible
 $ ansible
 ```
 
 # ディレクトリ構成
-https://docs.ansible.com/ansible/latest/user_guide/playbooks_best_practices.html#directory-layout
+- https://docs.ansible.com/ansible/latest/user_guide/playbooks_best_practices.html#directory-layout
