--- a/content/posts/frontend/html/00001.md
+++ b/content/posts/frontend/html/00001.md
@@ -6,9 +6,9 @@ tags: ["HTML5"]
 ---
 
 ## HTML5 markup detector
-[HTML5 markup detector](https://chrome.google.com/webstore/detail/html5-markup-detector/bfpdjioikkdalecnekdmimjmfpcbdjmo) をインストールし、  
-HTML5 で書かれたサイトにアクセスすると、ロケーションバーに緑色で 5と表示される。
+- [HTML5 markup detector](https://chrome.google.com/webstore/detail/html5-markup-detector/bfpdjioikkdalecnekdmimjmfpcbdjmo) をインストール  
+- `HTML5`で書かれたサイトにアクセスすると、ロケーションバーに緑色で 5と表示される。
 
 ## 仕様
-HTML5のdoctypeの書き方が <!doctype html> であることから表示中のページのdoctypeがそれに該当するかどうかで判定し、  
-アドレスバーの右端に"マル５"と表示してくれるものです
+- HTML5のdoctypeの書き方が <!doctype html> であることから表示中のページのdoctypeがそれに該当するかどうかで判定
+- アドレスバーの右端に"マル５"と表示してくれるもの
