--- a/content/posts/frontend/vanillajs/00001.md
+++ b/content/posts/frontend/vanillajs/00001.md
@@ -2,7 +2,7 @@
 title: JavaScriptの正規表現
 date: 2018-03-22T14:22:00+09:00
 showDate: true
-tags: ["JavaScript"]
+tags: ["Vanilla.js"]
 ---
 
 ### JavaScriptの正規表現
