--- a/content/posts/other/communication/00001.md
+++ b/content/posts/other/communication/00001.md
@@ -2,7 +2,7 @@
 title: Agile
 date: 2018-11-08T10:40:00+09:00
 showDate: true
-tags: ["communication"]
+tags: ["Agile"]
 ---
 
 ## 参考資料
@@ -14,7 +14,7 @@ tags: ["communication"]
 
 ## Agile
 - 顧客の価値、メンバーの価値、会社の利益をあげる道具
-- 競争速度の変化 -> ビジネスモデルの賞味期限の短縮 
+- 競争速度の変化 -> ビジネスモデルの賞味期限の短縮
 - 迅速な意思決定と、ビズネスモデルの早期具象化が求められる時代に
 
 ## プロダクトオーナー
@@ -47,7 +47,7 @@ tags: ["communication"]
 - タイムボックス
   - タイムボックスは厳密に15分を守る
   - 常に時間通りに始める (chatbotでリマインドするのもあり)
-  
+
 - 意識
   - 問題解決をしないこと
   - 事実を提供することに集中すること
