--- a/content/posts/other/network/00002.md
+++ b/content/posts/other/network/00002.md
@@ -1,11 +1,13 @@
 ---
-title: ドメイン名、ホスト名、FQDN(Fully Qualified Domain Name)=完全修飾ドメイン名の違い
+title: ネットワーク基礎
 date: 2018-11-07T09:30:00+09:00
 showDate: true
 tags: ["network"]
 ---
 
-## Macアドレス
+---
+
+# Macアドレス
 - ネットワーク部品に割り当てられたアドレス
 - 48ビットのアドレス
 - 先頭24ビットは、部品メーカーの識別番号
@@ -13,7 +15,10 @@ tags: ["network"]
 - 16進数表記
 - OSIの第2層のデータリンク層
 
-## OSI
+---
+
+# OSI
+## OSI参照モデル
 ### レイヤー7:アプリケーション層
 - アプリケーションに特化したプロトコルを規定
 - HTTP
@@ -55,6 +60,9 @@ tags: ["network"]
 ### アプリケーションゲートウェイ
 - プロキシのこと
 
+---
+
+# Linux基礎
 ## Linux
 - メモリ上に展開してプログラムをプロセス（PID）
 - ハードディスに割り当てる仮想メモリのことをスワップ
@@ -81,6 +89,9 @@ tags: ["network"]
 - /var
   - ログとかを格納したディレクトリ
 
+---
+
+# ドメイン
 ## ドメイン名
 - インターネット上のネットワークを一意に識別するための名称  
   ex.) 違うマンションなのに住所が一緒だと困る
@@ -95,15 +106,19 @@ tags: ["network"]
 - ドメイン名とホスト名を繋げた文字列のこと
 - http:// **www.hoge.co.jp** // 太字部分が該当
 
+---
+
 # DNS
 - Domain Name System
 - ドメイン名をIPアドレスに変換するシステム
-## Aレコード
+
+## DNSレコード
+### Aレコード
 - Adress Record
 - ドメインをIPアドレスに置き換えるレコード
 - 例）`hoge.com. IN A 192.168.0.1`
 
-## MXレコード
+### MXレコード
 - Mail Exchange
 - メールサーバのホスト名を記載するレコード
 - ドメインに紐づいたメールを使用する場合には不可欠
@@ -113,7 +128,7 @@ tags: ["network"]
   - 10ずつ増やしているのは、間に余裕を持たせているため!?
   - `XX@hoge.com`というメールアドレスは、`mail.hoge.com`が処理(配送)する
 
-## CNAMEレコード
+### CNAMEレコード
 - Canonical NAME
 - ドメインを別のドメインに置き換えるレコード
 - 特定のドメインを別のドメインに転送する場合に使用する
@@ -123,5 +138,29 @@ hoge.com. IN A 192.168.0.1
 www.hoge.com. IN CNAME hoge.com.
 ```
 
-## TXTレコード
+### TXTレコード
 - TEXT
+
+## DNSラウンドロビン
+- ドメイン名とIPアドレスを 1:n で対応付けること
+- hoge.co.jp = 192.168.1.1, 192.168.1.2, 192.168.1.3
+- ドメインへのアクセス時には、n のサーバへ負荷分散される
+- RFC3484
+
+---
+
+# IP アドレス
+（参考）
+- https://qiita.com/mogulla3/items/efb4c9328d82d24d98e6
+
+## グローバルIPアドレス
+- 世界的には、ICANNが管理、日本では、JPNICが管理
+
+## プライベートIPアドレス
+- グローバルIPアドレスに変換せずにネットワーク接続を試みた場合、ルーター側でパケットの破棄が行われ、接続できない事象になる。
+
+| CLASS | RANGE |
+|---|---|
+| クラスA | 10.0.0.0 ～ 10.255.255.255 |
+| クラスB | 172.16.0.0 ～ 172.31.255.255 |
+| クラスC | 192.168.0.0 ～ 192.168.255.255 |
