--- a/content/posts/other/test/00001.md
+++ b/content/posts/other/test/00001.md
@@ -1,14 +1,13 @@
 ---
-title: 結合テスト仕様書の作成
+title: 結合テスト
 date: 2018-03-08T13:08:00+09:00
 showDate: true
-tags: ["Integration Test"]
+tags: ["Test"]
 ---
 
 ### テストプロセス
-テストの世界標準には、ISO/IEC/IEEE 29119があり、テスト工程とテスト種別からテストプロセスが構成されている。
-
-https://qiita.com/kawasima/items/1fed574e7456edbad727
+- テストの世界標準には、ISO/IEC/IEEE 29119があり、テスト工程とテスト種別からテストプロセスが構成されている。  
+  https://qiita.com/kawasima/items/1fed574e7456edbad727
 
 ### テスト工程
 | TEST | Ja-NAME | DESCRIPTION |
@@ -20,25 +19,27 @@ https://qiita.com/kawasima/items/1fed574e7456edbad727
 | UAT | ユーザ受け入れテスト | ユーザがテストする |
 
 ### テスト設計
-テスト仕様書は、プロジェクト参画メンバーだけが理解できるようなものであってはならない。  
-第三者が客観的にテストすることができるような仕様書であるべき。  
+- テスト仕様書は、プロジェクト参画メンバーだけが理解できるようなものであってはならない。  
+- 第三者が客観的にテストすることができるような仕様書であるべき。  
 
 そのために、  
+```
 - 要求事項や設計を満たすかどうか
 - どうやって確認するのか
 - 結果はどうあるべきなのか
 - 誰がやっても迷わず同じことが可能か
+```
 を明確に定義する。（＝テスト設計）
 
-機能と観点を明確にしていく。  
+- 機能と観点を明確にしていく。  
 
 #### テスト設計の手順
 1. テスト種別の一覧表を作成する
 2. デシジョンテーブル
 
 ### デシジョンテーブル
-http://gihyo.jp/dev/serial/01/test_up/0005  
-様々な入力条件に対して、どのように動作（出力）するのか決定する表のこと  
+- 様々な入力条件に対して、どのように動作（出力）するのか決定する表のこと  
+  http://gihyo.jp/dev/serial/01/test_up/0005  
 
-カルノー図と組み合わせるとさらに便利  
-https://qiita.com/kawasima/items/98b5636db0172d9b5051  
+- カルノー図と組み合わせるとさらに便利  
+  https://qiita.com/kawasima/items/98b5636db0172d9b5051  
