Add Network DNS documents

--- a/content/posts/other/network/00002.md
+++ b/content/posts/other/network/00002.md
@@ -106,6 +106,98 @@ tags: ["network"]
 - ドメイン名とホスト名を繋げた文字列のこと
 - http:// **www.hoge.co.jp** // 太字部分が該当
 
+## サブドメイン
+- `http://example.com/`をルートドメインとした場合
+  - サブドメイン: `http://sub.example.com/`
+  - サブディレクトリ: `http://example.com/sub/`
+
+### 用途
+- サブドメインは、テーマをより詳細に掘り下げる場合に作成される
+- サブディレクトリは、テーマが分類されていたり役割が異なっていたりする場合に使用される
+
+## ドメインの分類
+`hoge.co.jp`
+
+- jp : トップレベルドメイン
+- co : セカンドレベルドメイン
+- hoge : サードレベルドメイン
+
+### トップレベルドメイン
+#### gTLD
+- 分野別トップレベルドメイン
+- 利用者の居住国に関係なく誰でも取得できるドメイン
+
+代表的なドメインの種類
+
+| ドメインの種類 | 特徴・用途 |
+|---|---|
+| com | 企業・商用サービスを対象としたドメイン (commercialの略) |
+| net | ネットワークサービスの提供者を対象としたドメイン (networkの略) |
+| org | 非営利団体を対象としたドメイン |
+| biz | ビジネスを目的で利用されるドメイン |
+| info | 主に情報の提供者（情報サイト）を対象としたドメイン (information) |
+
+#### ccTLD
+- 国別トップレベルドメイン
+- 国ごと、地域ごとに割り当てられたドメイン
+- 原則として、その国・地域に存在する個人（団体）でないと取得できない
+- 日本では`jp`が、ccTLDに該当する
+
+| ドメインの種類 | 特徴・用途 |
+|---|---|
+| jp | 企業・商用サービスを対象としたドメイン (commercialの略) |
+| cn | 中国 |
+| gb | イギリス |
+| en | ヨーロッパ連合 |
+| ru | ロシア |
+
+
+#### 属性別JPドメイン
+- ccTLDの`jp`ドメインの中で、セカンドレベルドメインに指定の文字列が入り、その文字列ごとに取得可能な組織が限定されているドメイン
+- ネットワークサービスを示す`ne.jp`を除き、1組織1つしか取得できない決まりとなっている
+- 個人が属性別ドメインJPドメインを取得することはできない
+
+| ドメインの種類 | 特徴・用途 |
+|---|---|
+| co.jp | 日本国内に登記のある会社・企業 (例：株式会社、有限会社、合名会社、合資会社、相互会社、特殊会社) |
+| or.jp | 特定の法人組織 (例：財団法人、社団法人、医療法人、監査法人、宗教法人、特殊法人、協同組合) |
+| ac.jp | 学校教育法等で認められた学校 (例：大学、大学校、高等専門学校、学校法人、職業訓練校) |
+| go.jp | 日本国の政府機関、各省庁が管轄する研究所、特殊法人（特殊会社を除く） |
+| ne.jp | ネットワークサービスごとに登録可能 |
+
+## 独自ドメインとサブドメインの違い
+### 独自ドメイン
+- お名前.comのようなドメイン登録サービスで取得できるオリジナルドメインのこと
+- 未使用のドメインである場合、ユーザ自身が希望するドメイン名を取得することができる
+- 独自ドメインの取得は、取得および更新の際に費用が発生することがある
+
+### サブドメイン
+- 独自ドメインをさらに分割して利用できるドメインのこと
+- 1つのドメインを目的別や用途別に分けて利用する際に使用される
+- 独自ドメインを取得するとサブドメインを作成することができる
+- 独自ドメインの前に`.`(ドット)で区切った任意の文字列を挿入して使用する
+- サブドメインの数量の制限はサービス事業者によって異なる
+- 複数サイト（またはサービス）を運営する際に用いられることが多い
+
+`yahoo`の例
+
+| サービス名 | URL | ドメイン名 |
+|---|---|---|
+| Yahoo! JAPAN | https://www.yahoo.co.jp | yahoo.co.jp |
+| Yahoo!ショッピング | https://shopping.yahoo.co.jp | shppping.yahoo.co.jp |
+| ヤフオク | https://auctions.yahoo.co.jp | auctions.yahoo.co.jp |
+| Yahoo!天気 | https://weather.yahoo.co.jp | weather.yahoo.co.jp |
+| Yahoo!ニュース | https://news.yahoo.co.jp | news.yahoo.co.jp |
+
+`Jimdo`、`wix`などでは無料版で作成したホームページの場合、サブドメインとして登録される
+
+| - | 無料版で作成できるURLの形式 |
+|---|---|
+| Jimdo | https://XXX.jimdofree.com |
+| wix | https://XXX.wixsite.com |
+
+## ドメイン名の
+
 ---
 
 # DNS
