--- a/content/posts/backend/scala/00009.md
+++ b/content/posts/backend/scala/00009.md
@@ -295,3 +295,25 @@ List.filterViaFlatMap(List(1,2,3,4,5))((x: Int) => x % 2 != 0)
 flatMap(Cons(1, Cons(2, Cons(3, Cons(4, Cons(5, Nil))))))(a => if (f(a)) List(a) else Nil)
 concat()
 ```
+
+# 第6章 純粋関数型の状態
+
+## 6.2 純粋関数型の乱数生成
+- 副作用から参照透過性を取り戻すためには、状態の更新を明示的なものにする
+- 状態を副作用として更新するのではなく、生成された値と共に新しい状態を返すようにする
+- つまり、乱数と新しい状態の両方を返す
+
+```Scala
+trait RNG {
+  def nextInt: (Int, RNG)
+}
+
+case class SimpleRNG(seed: Long) extends RNG {
+  override def nextInt: (Int, RNG) = {
+    val newSeed = (seed * 0x5DEECE66DL + 0xBL) & 0xFFFFFFFFFFFFL
+    val nextRNG = SimpleRNG(newSeed)
+    val n = (newSeed >>> 16).toInt
+    (n, nextRNG)
+  }
+}
+```
