--- a/content/posts/backend/scala/00009.md
+++ b/content/posts/backend/scala/00009.md
@@ -94,17 +94,10 @@ http://www.ne.jp/asahi/hishidama/home/tech/scala/annotation/tailrec.html
 ## 関数型データ構造の定義
 - データコンストラクタ
 
-
 ## 反変（contravariant）
-狭い型から、広い型へ変換
-
-反変バリデーター
-
-```
-```
+- 狭い型から、広い型へ変換
 
 # 第3章 関数型プログラミングのデータ構造
-
 ### 3-3
 ```Scala
 def foldRight[A, B](as: List[A], z: B)(f: (A, B) => B): B = as match {
@@ -278,9 +271,28 @@ def flatMap[A,B](as: List[A])(f: A => List[B]): List[B] =
 
 ```
 // Program Trace
-flatMap(List(1,2,3,4,5)((x: Int) => Cons(x, Nil)))
-map(Cons(1, Cons(2, Cons(3, Cons(4, Cons(5, Nil))))))(i => List(i, i))
-
+flatMap(List(1,2,3,4,5))((i => List(i, i))
+  concat(map(List(1,2,3,4,5))(i => List(i, i)))
+    map(List(1,2,3,4,5))(i => List(i, i))
+      foldRight(as, Nil: List[B])((a, b) => Cons(f(a), b))
+      f(1, foldRight(Cons(2, Cons(3, Cons(4, Cons(5, Nil))))))((a, b) => Cons(f(a), b))
+      f(1, f(2, foldRight(Cons(3, Cons(4, Cons(5, Nil))))))((a, b) => Cons(f(a), b))
+      f(1, f(2, f(3, foldRight(Cons(4, Cons(5, Nil))))))((a, b) => Cons(f(a), b))
+      f(1, f(2, f(3, f(4, foldRight(Cons(5, Nil))))))(((a, b) => Cons(f(a), b))
+      f(1, f(2, f(3, f(4, f(5, Nil)))))((a, b) => Cons(f(a), b))
+      // f = (i => List(i, i))
+      f(1, f(2, f(3, f(4, Cons(Cons(5, Cons(5, Nil)), Nil)))))((a, b) => Cons(f(a), b))
+      f(1, f(2, f(3, Cons(Cons(4, Cons(4, Nil)), Cons(Cons(5, Cons(5, Nil)), Nil)))))((a, b) => Cons(f(a), b))
+      f(1, f(2, Cons(Cons(3, Cons(3, Nil)),Cons(Cons(4, Cons(4, Nil)), Cons(Cons(5, Cons(5, Nil)), Nil)))))((a, b) => Cons(f(a), b))
+      f(1, Cons(Cons(2, Cons(2, Nil)), Cons(Cons(3, Cons(3, Nil)),Cons(Cons(4, Cons(4, Nil)), Cons(Cons(5, Cons(5, Nil)), Nil)))))((a, b) => Cons(f(a), b))
+      Cons(Cons(1, Cons(1, Nil)), Cons(Cons(2, Cons(2, Nil)), Cons(Cons(3, Cons(3, Nil)),Cons(Cons(4, Cons(4, Nil)), Cons(Cons(5, Cons(5, Nil)), Nil)))))((a, b) => Cons(f(a), b))
+  foldRight(Cons(Cons(1, Cons(1, Nil)), Cons(Cons(2, Cons(2, Nil)), Cons(Cons(3, Cons(3, Nil)),Cons(Cons(4, Cons(4, Nil)), Cons(Cons(5, Cons(5, Nil)), Nil))))))(append)
+f(Cons(Cons(1, Cons(1, Nil))), f(Cons(Cons(2, Cons(2, Nil)))), f(Cons(Cons(3, Cons(3, Nil)))), f(Cons(Cons(4, Cons(4, Nil)))), f(Cons(Cons(5, Cons(5, Nil))), Nil))
+f(Cons(Cons(1, Cons(1, Nil))), f(Cons(Cons(2, Cons(2, Nil)))), f(Cons(Cons(3, Cons(3, Nil)))), f(Cons(Cons(4, Cons(4, Nil)))), Cons(5, Cons(5, Nil)))
+f(Cons(Cons(1, Cons(1, Nil))), f(Cons(Cons(2, Cons(2, Nil)))), f(Cons(Cons(3, Cons(3, Nil)))), Cons(4, Cons(4, Cons(5, Cons(5, Nil)))))
+f(Cons(Cons(1, Cons(1, Nil))), f(Cons(Cons(2, Cons(2, Nil)))), Cons(3, Cons(3, Cons(4, Cons(4, Cons(5, Cons(5, Nil)))))))
+f(Cons(Cons(1, Cons(1, Nil))), Cons(2, Cons(2, Cons(3, Cons(3, Cons(4, Cons(4, Cons(5, Cons(5, Nil)))))))))
+Cons(1, Cons(1, Cons(2, Cons(2, Cons(3, Cons(3, Cons(4, Cons(4, Cons(5, Cons(5, Nil))))))))))
 ```
 
 ### Exercise 21
@@ -292,6 +304,8 @@ def filterViaFlatMap[A](l: List[A])(f: A => Boolean): List[A] =
 ```
 // Program Trace
 List.filterViaFlatMap(List(1,2,3,4,5))((x: Int) => x % 2 != 0)
-flatMap(Cons(1, Cons(2, Cons(3, Cons(4, Cons(5, Nil))))))(a => if (f(a)) List(a) else Nil)
-concat()
+  flatMap(List(1,2,3,4,5))(a => if (f(a)) List(a) else Nil)
+    concat(map(List(1,2,3,4,5))(a => if (f(a)) List(a) else Nil))
+      map(List(1,2,3,4,5))(a => if (f(a)) List(a) else Nil)
+        foldRight(as, Nil: List[B])((a, b) => Cons(f(a), b))
 ```
