Update Scala Tips

--- a/content/posts/backend/scala/99999.md
+++ b/content/posts/backend/scala/99999.md
@@ -1,5 +1,5 @@
 ---
-title: Scala
+title: Scala 変位指定
 date: 2019-02-25T12:30:00+09:00
 showDate: true
 tags: ["Scala"]
@@ -12,7 +12,7 @@ https://speakerdeck.com/taketora/bian-wei-zhi-ding-nituitewakariyasukujie-shuo-s
 - クラス、インタフェース定義時に何の型が入るか決まっていないがインスタンス化する際に型を決定すること
 
 例） クラス定義時に何の型が入るか不明であるため、型引数としてTを定義
-```
+```scala
 class Glass[T](var content: T) {
   def put(t: T): Unit = { content = t }
   def get: T = content
@@ -20,14 +20,14 @@ class Glass[T](var content: T) {
 ```
 
 型を定義する
-```
+```scala
 class Drink
 class Juice extends Drink
 class Water extends Drink
 ```
 
 インスタンス化するときに、型を決定する
-```
+```scala
 val waterGlass = new Glass[Water](new Water)
 val juiceGlass = new Glass[Juice](new Juice)
 ```
@@ -36,7 +36,7 @@ val juiceGlass = new Glass[Juice](new Juice)
 - スーパークラスにサブクラスのインスタンスをバインドできる機能のこと
 
 例）
-```
+```scala
 val drink: Drink = new Juice
 ```
 
@@ -44,7 +44,7 @@ val drink: Drink = new Juice
 - 型パラメータ`Glass[T]`は、デフォルトの状態では、サブタイプの関係が存在しない
 - つまり`Water`が`Drink`のサブタイプであっても、`Glass[Water]`型を`Glass[Drink]`型にバインドできない
 
-```
+```scala
 // コンパイルエラー
 val glassDrink: Glass[Drink] = new Glass[Water](new Water)
 ```
@@ -55,21 +55,21 @@ val glassDrink: Glass[Drink] = new Glass[Water](new Water)
 - 型パラメータで定義したクラスにもサブタイプの関係を利用したい場合もある
 - その場合共変[+T]することで、サブタイプの関係を型パラメータで定義したクラスに使うことができる
 
-```
+```scala
 class Glass[+T](var content: T) {
   def put(t: T): Unit = { content = t }
   def get: T = content
 }
 ```
 
-```
+```scala
 val glassDrink: Glass[Drink] = new Glass[Water](new Water)
 ```
 
 ## 反変
 - 共変の逆
 
-```
+```scala
 val glassDrink: Glass[Water] = new Glass[Drink](new Drink)
 ```
 
@@ -89,7 +89,7 @@ Any
 ```
 
 ### 例）Listは共変
-```
+```scala
 val list: List[Any] = List[Int](1,2,3)
 ```
 - `List[Int]`を`List[Any]`にバインドできる
@@ -98,14 +98,14 @@ val list: List[Any] = List[Int](1,2,3)
 - BはAのスーパー型
 - 結果型`List[B]`は、Listがインスタンス化した要素を返すか、汎化した要素のListを返すことを表している
 
-```
+```scala
 sealed abstract class List[+A] extends AbstractSeq[A]
 // 省略
   def ::[B >: A](x: B): List[B] = new scala.collection.immutable.::(x, this)
 ```
 
 ### 例）同じ要素（`Int`）の場合には、同じ要素（`Int`）の`List`型が作成される
-```
+```scala
 scala> val list = List(2,3,4)
 list: List[Int] = List(2,3,4)
 
@@ -114,13 +114,13 @@ listInt: List[Int] = List(1,2,3,4)
 ```
 
 ### 例）`Double`型を要素に追加する場合は、`Int、Double`のスーパータイプである`AnyVal`型の`List`が作られる
-```
+```scala
 scala> val listAnyVal = 0.5 :: listInt
 listAnyVal: List[AnyVal] = List(0.5,1,2,3,4)
 ```
 
 ### 例）`String`型を要素に追加する場合は、`Int、String`のスーパータイプである`Any`型の`List`が作られる
-```
+```scala
 scala> val listAny = "Hello" :: listInt
 listAny: List[Any] = List(Hello,1,2,3,4)
 ```
@@ -132,7 +132,7 @@ listAny: List[Any] = List(Hello,1,2,3,4)
 - 非変で定義された`Arrya[T]`は、mutableなコレクション（配列）
 
 例）仮に共変がOKだった場合に、`Water`型が`Juice`型に変わってしまう例
-```
+```scala
 val arrayWater: Array[Water] = Array(Water,Water)
 
 val arrayDrink: Array[Drink] = arrayWater
@@ -142,4 +142,4 @@ arrayDrink(0) = Juice
 
 ## 反変のメリット
 - FunctionN（関数を定義するtraitで、通常はシンタックスシュガーを使う）
-- 
+- TODO
